<resources>
    <string name="app_name">Team SPORK Pit Scouting</string>
    <string name="team_spork_3196">Team SPORK #3196</string>
    <string name="name">Student Name:</string>
    <string name="team_information">Team Information</string>
    <string name="team_number">Team Number:</string>
    <string name="pit_number">Pit Number:</string>
    <string name="robot_information">Robot Information</string>
    <string name="height_of_robot">Height (Inches)</string>
    <string name="weight_of_robot">Weight (lbs)</string>
    <string name="drivetrain_information">Drivetrain Information</string>
    <string name="drivetrain_type">Drivetrain Type:</string>
    <string name="order_of_wheels">Order of Wheels:</string>
    <string name="powercell_strategy">Cargo Strategy</string>
    <string name="text_powercell_question">How many cargo can the robot hold?</string>
    <string name="text_pickup_location_question">Cargo Pickup Location:</string>
    <string name="text_shooting_location_question">Cargo Shooting Location:</string>
    <string name="text_wheel_number_question"># of Wheels:</string>
    <string name="text_shooting_hub">Cargo Shooting Hub Level:</string>
    <string name="endgame_strategy">Endgame Strategy:</string>
    <string name="engame_question">Endgame Strategy:</string>
    <string name="engame_comment">Describe Endgame Strategy (Optional)</string>
    <string name="autonomous_strategy">Autonomous Strategy</string>
    <string name="autonomous_comment">Describe Autonomous Strategy</string>
    <string name="additional_comment">Additional Comments (Optional)</string>
    <string name="additional_information">Additional Information</string>
    <string name="submit_pit_data">~ Submit Pit Data ~</string>
    <string name="type_notes_here">Type Notes Here</string>
    <string name="zero_number">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="cargo_in_upper_hub">Cargo In Upper Hub</string>
    <string name="cargo_in_lower_hub">Cargo In Lower Hub</string>
    <string name="taxi_leave_tarmac_area">Taxi (leave tarmac area)</string>
    <string name="match_number">Match Number:</string>
    <string name="submit_match_data">~ Submit Match Data ~</string>
    <string name="win">Win?</string>
    <string name="color">Alliance Color:</string>
    <string name="end_of_match">End of Match</string>
    <string name="end_game">End Game</string>
    <string name="teleop_period">Teleop Period</string>
    <string name="auto_period">Autonomous Period</string>
    <string name="match_information">Match Information</string>
    <string name="enter_blue_penalty_pts">Blue Penatly Points</string>
    <string name="enter_red_penalty_pts">Red Penalty Points</string>
    <string name="broken">Broken?</string>
    <string name="disabled">Disabled?</string>
    <string name="red_total_points">Red Total Points:</string>
    <string name="blue_total_points">Blue Total Points:</string>
    <string name="issues_found">Description of Issue(s)</string>
    <string name="issues_resolved">Issues Resolved (Describe Fix)</string>
    <string name="unresolved_issues">Unresolved Issues</string>
    <string name="pit_comments">Pit Comments</string>
    <string name="driver_station">Driver Station:</string>
    <string name="climber_level">Level Climbed:</string>
    <string name="penalty_card">Penalty Cards Earned:</string>
</resources>