<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#404040"
    tools:context=".pit_issue_log">

    <View
        android:id="@+id/horizontal_space"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issues_found"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_background"
        android:text="@string/issues_found"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_space" />

    <EditText
        android:id="@+id/issues_found_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:hint="Type Here"
        android:textColorHint="@color/white"
        android:textSize="25dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issues_found"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/issues_resolved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_background"
        android:text="@string/issues_resolved"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issues_found_editText" />

    <EditText
        android:id="@+id/issues_resolved_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:hint="Type Here"
        android:textColorHint="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issues_resolved"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/unresolved_issues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_background"
        android:text="@string/unresolved_issues"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issues_resolved_editText" />

    <EditText
        android:id="@+id/unresolved_issue_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:hint="Type Here"
        android:textColorHint="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unresolved_issues"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/pit_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_background"
        android:text="@string/pit_comments"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unresolved_issue_editText" />

    <EditText
        android:id="@+id/pit_comments_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:hint="Type Here"
        android:textColorHint="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pit_comments"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/horizontal_space2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pit_comments_editText" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/submit_pit_data"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_space2" />


</androidx.constraintlayout.widget.ConstraintLayout>